--- a/pages/donaciones.html
+++ b/pages/donaciones.html
@@ -1,117 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ayudanos a seguir protegiendo nuestro hogar. Conocé cómo utilizamos cada donación para maximizar nuestro impacto ambiental. Tu confianza es nuestro motor.">
+    <meta name="description"
+        content="Ayudanos a seguir protegiendo nuestro hogar. Conocé cómo utilizamos cada donación para maximizar nuestro impacto ambiental. Tu confianza es nuestro motor.">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Donaciones | PM</title>
 </head>
-<body>
-<header>
-   <nav class="navbar navbar-expand-lg nav-color">
-        <img src="../images/logo.jpg" alt="logo-marca-pajaro" class="logo">
-        <div class="container-fluid">
-            <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon nav-icono"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav nav-mia">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./quienesSomos.html">Quienes Somos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./proyectosActuales.html">Proyectos Actuales</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./educacionAmbiental.html">Educacion Ambiental</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Donaciones</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
-<main>
-<!-- TENEMOS QUE UNIR CON section las diversas partes del codigo para que tengan ssentido -->
 
-    <h1>Donaciones - Pulmon Natural</h1>
-    <section class="main-section"> 
-        <h2>Haz una donacion!</h2>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg nav-color">
+            <img src="../images/logo.jpg" alt="logo-marca-pajaro" class="logo">
+            <div class="container-fluid">
+                <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon nav-icono"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav nav-mia">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./quienesSomos.html">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./proyectosActuales.html">Proyectos Actuales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./educacionAmbiental.html">Educacion Ambiental</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Donaciones</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <!-- TENEMOS QUE UNIR CON section las diversas partes del codigo para que tengan ssentido -->
+
+        <h1>Donaciones - Pulmon Natural</h1>
+        <section class="main-section">
+            <h2>Haz una donacion!</h2>
             <article>
                 <p>
-                    Tu aporte es fundamental para poder seguir protegiendo nuestros ecosistemas! Cada  donacion, opr pequeña que sea, ayuda a plantar arboles, limpiar rios, educar     comunidades y construir un futuro mas verde! 
+                    Tu aporte es fundamental para poder seguir protegiendo nuestros ecosistemas! Cada donacion, opr
+                    pequeña que sea, ayuda a plantar arboles, limpiar rios, educar comunidades y construir un futuro mas
+                    verde!
 
                 </p>
             </article>
 
 
-    </section>
-    <section class="doncaiones"> <!-- Estan en una misma seccion porque tienen mas relacion entre si -->
-        <h2>Como puedes donar?</h2>
-                <ul>
-                    <li> 
-                        <p><strong> Transferencia Bancaria </strong></p>
-                        <p>
+        </section>
+        <section class="doncaiones"> <!-- Estan en una misma seccion porque tienen mas relacion entre si -->
+            <h2>Como puedes donar?</h2>
+            <ul>
+                <li>
+                    <p><strong> Transferencia Bancaria </strong></p>
+                    <p>
                         Banco Verde - Cuenta N°: 123456789 - CBU: 123456789
-                        </p>
-                    </li>
-                    <li> 
-                        <p><strong> Mercado Pago / Pay Pal </strong></p>
-                        <p>
+                    </p>
+                </li>
+                <li>
+                    <p><strong> Mercado Pago / Pay Pal </strong></p>
+                    <p>
                         pulmonnatural@correo.org
-                        </p>
-                    </li>
-                    <li> 
-                        <p><strong> Donacion Presencial </strong></p>
-                        <p>
+                    </p>
+                </li>
+                <li>
+                    <p><strong> Donacion Presencial </strong></p>
+                    <p>
                         Te esperamos en nuestra sede fisica en Calle Falsa 123, CABA
-                        </p>  
-                    </li>
-                </ul>
-    </section>
-    <section>
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section>
             <h2>Que logramos con tu ayuda?</h2>
             <ul class="">
-                <li><p>Plantacion de arboles en zonas urbanas y rurales</p></li>
-                <li><p>Campañas de reciclaje y limpieza comunitaria</p></li>
-                <li><p>Programas educativos en escuelas y barrios</p></li>
-                <li><p>Apoyo a voluntarios y guardianes ambientales</p></li>
+                <li>
+                    <p>Plantacion de arboles en zonas urbanas y rurales</p>
+                </li>
+                <li>
+                    <p>Campañas de reciclaje y limpieza comunitaria</p>
+                </li>
+                <li>
+                    <p>Programas educativos en escuelas y barrios</p>
+                </li>
+                <li>
+                    <p>Apoyo a voluntarios y guardianes ambientales</p>
+                </li>
             </ul>
-    </section>
-    <section>
-        <h2>Gracias por ser parte del cambio! </h2>
+        </section>
+        <section>
+            <h2>Gracias por ser parte del cambio! </h2>
             <article>
                 <p>
-                    Con tu ayuda podemos seguir construyendo un mundo mas verde y justo para las    generaciones futuras
+                    Con tu ayuda podemos seguir construyendo un mundo mas verde y justo para las generaciones futuras
                 </p>
             </article>
-    </section>
-    <section class="form">
+        </section>
+        <section class="form">
             <form action="#" method="post" class="form-1">
-                    <label for="donacion"> <p>Monto de la donacion:</p> </label>
-                    <input type="number" id="donacion" name="donacion" placeholder="Ej: 500" required>
-                    <button type="submit"> Donar ahora </button>
+                <label for="donacion">
+                    <p>Monto de la donacion:</p>
+                </label>
+                <input type="number" id="donacion" name="donacion" placeholder="Ej: 500" required>
+                <button type="submit"> Donar ahora </button>
             </form>
-    </section>
-    <section class="images">
-        <img src="../images/donacion/donation-1.jpg" alt="voluntario-invitando-a-donar" class="image-design">
-        <img src="../images/donacion/donation-2.jpg" alt="intercambio-de-dinero" class="image-design">
-        <img src="../images/donacion/donation-3.jpg" alt="dinero-siendo-ofrecido" class="image-design">
-    </section>
+        </section>
+        <section class="images">
+            <img src="../images/donacion/donation-1.jpg" alt="voluntario-invitando-a-donar" class="image-design">
+            <img src="../images/donacion/donation-2.jpg" alt="intercambio-de-dinero" class="image-design">
+            <img src="../images/donacion/donation-3.jpg" alt="dinero-siendo-ofrecido" class="image-design">
+        </section>
 
-</main>
-<footer>
+    </main>
+    <footer>
         <section>
             <div class="container-fluid mt-5">
                 <div class="row">
@@ -142,12 +157,13 @@
                 </div>
             </div>
         </section>
-    </footer> 
+    </footer>
 
- <!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
