--- a/pages/educacionAmbiental.html
+++ b/pages/educacionAmbiental.html
@@ -1,145 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Llevamos la conciencia ambiental a las aulas. Descubrí nuestros programas educativos en escuelas de Argentina para formar a los futuros guardianes del planeta.">
+    <meta name="description"
+        content="Llevamos la conciencia ambiental a las aulas. Descubrí nuestros programas educativos en escuelas de Argentina para formar a los futuros guardianes del planeta.">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-     <!-- CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../styles/styles.css">
 
     <title>Educacion Ambiental | PM</title>
 </head>
+
 <body>
-    
-<header>
-   <nav class="navbar navbar-expand-lg nav-color">
-        <img src="../images/logo.jpg" alt="logo-marca-pajaro" class="logo">
-        <div class="container-fluid">
-            <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon nav-icono"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav nav-mia">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./quienesSomos.html">Quienes Somos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./proyectosActuales.html">Proyectos Actuales</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Educacion Ambiental</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./donaciones.html">Donaciones</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
- 
 
-<main>
-<!-- TENEMOS QUE UNIR CON section las diversas partes del codigo para que tengan ssentido -->
-    
-
-        <h1>Educacion Ambiental - Pulmon Natural</h1>
-<section class="testimonios-grid"> 
-        <article>
-            <h2>Aprender a cuidar</h2>
-                <p>
-                    En <strong>Pulmon Natural</strong> creemos que la educaciion es la herramienta mas  poderosa para transformar la relaicon entre las personas y el medio ambiente. Por    eso, desarrollamos actividades y recursos para fomentar una conciencia ecologica     desde la infancia hasta la adultez
-                </p>
-        </article>
-        <article>
-         <h2>Que hacemos?</h2>
-            <ul>
-                <li><p>Charlas en talleres y escuelas:</p>
-                    <p>Llevamos programas educativos a nivel inicial, primario y secundario. Adaptados a cada edad
-                    </p>    
-                </li>
-
-                <li><p>Capacitacion comunitaria:</p>
-                    <p> Ofrecemos cursos gratuitossobre reciclaje, compostaje, ahorro energetico y consumo responsable
-                    </p>   
-                </li>
-                <li><p>Recursos digitales:</p>
-                    <p> Creamos infografias, videos y guias practicas para docentes, estudiantes y familias
-                    </p>
-                </li>
-                <li><p>Campañas informativas:</p>
-                     <p>
-                    Organizamos actividades abiertas como ferias ambientales, eco-retos y jornadas tematicas
-                    </p>
-                </li>
-
-            </ul>
-    </article>
-
-      <article>  
-      <h2>Objetivos de nuestra educacion ambiental</h2>
-        <ul class="ea-white">
-            <li >
-                <p>Promover habitos sostenibles en la vida cotidiana.</p>
-            </li>
-            <li>
-                <p>Conectar a las personas con la naturaleza desde el conocimiento</p>
-            </li>
-            <li>
-                <p>Fomentar el pensamiento critico y el compromiso con el entorno</p>
-            </li>
-            <li>
-                <p>Formar multiplicadores del pensamiento ecologico</p>
-            </li>
-        </ul>
-    </article>
-    <article>
-                <h1>Comunicación para el Cambio Ambiental</h1>
-                <p><strong>Aprendé a contar historias poderosas que inspiren acción y movilicen a tu comunidad.</strong></p>
-                <h2>Objetivos</h2>
-                    <ul>
-                        <li>
-                            <p>Dotar a los participantes de herramientas de storytelling para transformar datos duros y problemas complejos en narrativas humanas y emocionantes.</p>
+    <header>
+        <nav class="navbar navbar-expand-lg nav-color">
+            <img src="../images/logo.jpg" alt="logo-marca-pajaro" class="logo">
+            <div class="container-fluid">
+                <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon nav-icono"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav nav-mia">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
-                        <li> 
-                            <p>Enseñar estrategias de comunicación digital para campañas de concientización y recaudación de fondos.</p>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./quienesSomos.html">Quienes Somos</a>
                         </li>
-                        <li>
-                            <p>Capacitar en el manejo de la comunicación en situaciones de crisis o conflicto socioambiental.</p>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./proyectosActuales.html">Proyectos Actuales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Educacion Ambiental</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./donaciones.html">Donaciones</a>
                         </li>
                     </ul>
-    </article>
-</section>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
-    <section>
-    <h2>Queres participar?</h2>
-        <article>
+    <main>
+        <!-- TENEMOS QUE UNIR CON section las diversas partes del codigo para que tengan ssentido -->
+
+
+        <h1>Educacion Ambiental - Pulmon Natural</h1>
+        <section class="testimonios-grid">
+            <article>
+                <h2>Aprender a cuidar</h2>
                 <p>
-                    Si sos docente, estudiante o parte de una institucion interesada escribinos a: 
+                    En <strong>Pulmon Natural</strong> creemos que la educaciion es la herramienta mas poderosa para
+                    transformar la relaicon entre las personas y el medio ambiente. Por eso, desarrollamos actividades y
+                    recursos para fomentar una conciencia ecologica desde la infancia hasta la adultez
+                </p>
+            </article>
+            <article>
+                <h2>Que hacemos?</h2>
+                <ul>
+                    <li>
+                        <p>Charlas en talleres y escuelas:</p>
+                        <p>Llevamos programas educativos a nivel inicial, primario y secundario. Adaptados a cada edad
+                        </p>
+                    </li>
+
+                    <li>
+                        <p>Capacitacion comunitaria:</p>
+                        <p> Ofrecemos cursos gratuitossobre reciclaje, compostaje, ahorro energetico y consumo
+                            responsable
+                        </p>
+                    </li>
+                    <li>
+                        <p>Recursos digitales:</p>
+                        <p> Creamos infografias, videos y guias practicas para docentes, estudiantes y familias
+                        </p>
+                    </li>
+                    <li>
+                        <p>Campañas informativas:</p>
+                        <p>
+                            Organizamos actividades abiertas como ferias ambientales, eco-retos y jornadas tematicas
+                        </p>
+                    </li>
+
+                </ul>
+            </article>
+
+            <article>
+                <h2>Objetivos de nuestra educacion ambiental</h2>
+                <ul class="ea-white">
+                    <li>
+                        <p>Promover habitos sostenibles en la vida cotidiana.</p>
+                    </li>
+                    <li>
+                        <p>Conectar a las personas con la naturaleza desde el conocimiento</p>
+                    </li>
+                    <li>
+                        <p>Fomentar el pensamiento critico y el compromiso con el entorno</p>
+                    </li>
+                    <li>
+                        <p>Formar multiplicadores del pensamiento ecologico</p>
+                    </li>
+                </ul>
+            </article>
+            <article>
+                <h1>Comunicación para el Cambio Ambiental</h1>
+                <p><strong>Aprendé a contar historias poderosas que inspiren acción y movilicen a tu comunidad.</strong>
+                </p>
+                <h2>Objetivos</h2>
+                <ul>
+                    <li>
+                        <p>Dotar a los participantes de herramientas de storytelling para transformar datos duros y
+                            problemas complejos en narrativas humanas y emocionantes.</p>
+                    </li>
+                    <li>
+                        <p>Enseñar estrategias de comunicación digital para campañas de concientización y recaudación de
+                            fondos.</p>
+                    </li>
+                    <li>
+                        <p>Capacitar en el manejo de la comunicación en situaciones de crisis o conflicto
+                            socioambiental.</p>
+                    </li>
+                </ul>
+            </article>
+        </section>
+
+
+        <section>
+            <h2>Queres participar?</h2>
+            <article>
+                <p>
+                    Si sos docente, estudiante o parte de una institucion interesada escribinos a:
                     educacion@pulmonnatural.org
-                    Tambien podes descargar nuestros recursos o seguirnos en redes sociales para    recibir contenido educativo
+                    Tambien podes descargar nuestros recursos o seguirnos en redes sociales para recibir contenido
+                    educativo
                 </p>
 
-        </article>
-    </section>
+            </article>
+        </section>
 
-    <h1>"Educar es sembrar conciencia, y cada conciencia es una semilla para el planeta"</h1>
-    <section class="images">
-        <img src="../images/educacionAmbiental/ambientalEduc-1.jpg" alt="voluntario-en-aula" class="image-design">
-        <img src="../images/educacionAmbiental/ambientalEduc-2.jpg" alt="niños-felices" class="image-design">
-        <img src="../images/educacionAmbiental/ambientalEduc-3.jpg" alt="niños-aprendiendo" class="image-design">
-    </section>
-</main>
-<footer>
+        <h1>"Educar es sembrar conciencia, y cada conciencia es una semilla para el planeta"</h1>
+        <section class="images">
+            <img src="../images/educacionAmbiental/ambientalEduc-1.jpg" alt="voluntario-en-aula" class="image-design">
+            <img src="../images/educacionAmbiental/ambientalEduc-2.jpg" alt="niños-felices" class="image-design">
+            <img src="../images/educacionAmbiental/ambientalEduc-3.jpg" alt="niños-aprendiendo" class="image-design">
+        </section>
+    </main>
+    <footer>
         <section>
             <div class="container-fluid mt-5">
                 <div class="row">
@@ -171,9 +186,10 @@
             </div>
         </section>
     </footer>
- <!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script> 
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
